@@ -13,6 +13,8 @@ Changelog for 1.3.24
 * Upgrade now handles nulls in model field of makemodel (Chris T)
 * Fixed issue with comment in account.sql (Chris T)
 * Removed unused Subcontractor GIFI field (Chris T, h/t Erik H)
+* Changed upgrade screen to pull AR/AP numbers (Erik H)
+* Rebuild modules after upgrade, ensuring upgrade to latest version (Chris T)
 
 Berend T is Berend Tober
 Chris T is Chris Travers
